# VoXera

./: .gitignore  LICENSE  README.md  VoXera.xmind  pyproject.toml  requirements.txt
Automatic Speech Recognition/vxhASR/: README.md  asr_hub.py
src/VoXera/AutomaticSpeechRecognition/ScriptsModels/Vosk/: VXvosk.py  test.py
src/VoXera/AutomaticSpeechRecognition/ScriptsModels/Whisper/: VXwhisper.py  test.py
src/VoXera/Automatic_Speech_Recognition/Vosk/: VXvosk.py  test.py
src/VoXera/Automatic_Speech_Recognition/Whisper/: VXwhisper.py
src/VoXera/KeywordExtraction/PerDeepKE/: VXperdeepke.py  embedding.py  text_segmentation.py
src/VoXera/Keyword_Extraction/PerDeepKE/: VXperdeepke.py  test.py
src/VoXera/Logging/: VXlogging.py
src/VoXera/ParaphraseGeneration/ScriptsModels/Lab/Parrot/: VXparrot.py  test.py
src/VoXera/ParaphraseGeneration/ScriptsModels/Lab/Pegasus/: VXpegasus.py  test.py
src/VoXera/ParaphraseGeneration/ScriptsModels/Lab/T5/: VXt5.py
src/VoXera/ParaphraseGeneration/ScriptsModels/Parrot/: VXparrot.py
